--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "ejs": "^2.5.2",
     "express": "^4.0.0",
     "html-webpack-plugin": "^2.28.0",
+    "jquery": "^3.2.1",
     "mongodb": "^2.2.29",
     "mongoose": "^4.10.8",
     "react": "15.4.2",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "15.4.2",
     "react-router-dom": "^4.0.0"
   },
