--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Gregory Testo",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
     "babel-preset-es2015": "^6.18.0",
