--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-core": "^6.18.2",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "devicon": "^2.0.0",
     "ejs": "^2.5.2",
     "express": "^4.0.0",
     "html-webpack-plugin": "^2.28.0",
